<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/activity_display_message"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hola_jimmy"
        android:textSize="24dp"

        />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_apertura_tienda"
        android:layout_weight="0.3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_realizar_venta"
        android:layout_weight="0.3" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_cierre_tienda"
        android:layout_weight="0.3" />

</LinearLayout>